[package]
name = "solana-fast-tester"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
bincode = "1"
serde = "1"
serde_json = "1"
anyhow = "1"
borsh = "0.9.3"
log = "0.4"
solana-sdk = "1.10"
solana-program = "1.10"
solana-runtime = "1.10"
solana-program-runtime = "1.10"
solana-banks-server = "1.10"
solana-banks-client = "1.10"
solana-vote-program = "1.10"
solana-bpf-loader-program = "1.10"
